WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112281
chromium's WebFrameTest.ReplaceNavigationAfterHistoryNavigation failing after
r145734
https://bugs.webkit.org/show_bug.cgi?id=112281
Summary
chromium's WebFrameTest.ReplaceNavigationAfterHistoryNavigation failing after...
Nate Chapin
Reported
2013-03-13 13:11:30 PDT
The early return check in DocumentLoader::maybeFinishLoadingMultipartContent is incomplete, it should also check whether the load is actually multipart.
Attachments
patch
(1.40 KB, patch)
2013-03-13 13:13 PDT
,
Nate Chapin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nate Chapin
Comment 1
2013-03-13 13:13:39 PDT
Created
attachment 192978
[details]
patch
WebKit Review Bot
Comment 2
2013-03-13 14:29:37 PDT
Comment on
attachment 192978
[details]
patch Clearing flags on attachment: 192978 Committed
r145752
: <
http://trac.webkit.org/changeset/145752
>
WebKit Review Bot
Comment 3
2013-03-13 14:29:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug