chromium's WebFrameTest.ReplaceNavigationAfterHistoryNavigation failing after r145734 https://bugs.webkit.org/show_bug.cgi?id=112281

Reviewed by Adam Barth.

Fixes the aforementioned chromiun webkit_unit_test

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::maybeFinishLoadingMultipartContent): FrameLoader::isReplacing() is not quite
    synonymous with loading multipart content. Check that it's actually loading multipart before doing
    multipart-specific things.


Canonical link: https://commits.webkit.org/130601@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145752 268f45cc-cd09-0410-ab3c-d52691b4dbfc